syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.inventory";
option java_outer_classname = "InventoryProto";

package inventory;

service InventoryService {
  rpc CheckAvailability(BulkProductRequest) returns (BulkProductResponse);
  rpc ReserveProducts(ReserveProductsRequest) returns (ReserveProductsResponse);
}

message BulkProductRequest {
  repeated ProductRequestItem items = 1;
  string rqUid=2;
}

message ProductRequestItem {
  int64 product_id = 1;
  int32 requested_quantity = 2;
}

message BulkProductResponse {
  string rqUid=1;
  repeated ProductResponseItem available_items = 2;
  repeated ProductResponseItem unavailable_items = 3;
}

message ProductResponseItem {
  int64 product_id = 1;
  string name = 2;
  int32 available_quantity = 3;
  double price = 4;
  double sale = 5;
  bool is_available = 6;
  int32 requested_quantity = 7;
}
message ReserveProductsRequest {
  string order_id = 1;
  repeated ProductRequestItem items = 2;
}

message ReserveProductsResponse {
  string order_id = 1;
  bool success = 2;
  string message = 3;
  repeated ProductResponseItem reserved_items = 4;
  repeated ProductResponseItem failed_items = 5;
}